fixing paragraph spacing

--- a/index.css
+++ b/index.css
@@ -28,14 +28,15 @@ h2{
 
 p{
     color: hsla(0, 0%, 100%, 0.75);
-    margin: 2rem 2rem 1rem;
-    /* figure out correct width */
-    word-spacing: .3em;  /* check this */
-    width: 72%;
+    margin: 2rem 2rem 2rem 2rem; 
+    word-spacing: 18%;
+    width: 80%;
+    /* figure out correct width  */
 }
 
 .card{
     padding: 5% 10% 0;
+    /*max-width: 88%;*/
 }
 
 .card--icon{
@@ -101,6 +102,7 @@ p{
 
     .card{
         margin: 8em 0 10em 0;
+        height: 80%;
     }
 
     .card--div-sedans{
